Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107106

qtattributionsscanner: Fail for invalid files

XMLWordPrintable

    • 59a6e371be (qt/qttools/dev) 59a6e371be (qt/tqtc-qttools/dev) d40bda52ed (qt/qttools/6.4) d40bda52ed (qt/tqtc-qttools/6.4)

      qtattributionsscanner should fail if it detects invalid or incomplete qt_attribution.json files.

      So far invalid entries are often detected only right before a release. Instead, the CI should detect such invalid or incomplete entries, and reject the respective patch.

       

      This can be achieved by just returning an error code in qtattributionsscanner. THen the docs build that is automatically run in the CI will fail.

        For Gerrit Dashboard: QTBUG-107106
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes