qtattributionsscanner: Exit with error for qt_attribution.json warnings

So far qtattributionsscanner did print warnings for erroneous or
incomplete qt_attribution.json files, but still generated output and
returned normally. Let's be more strict, and actually fail in these
cases.

This also required moving the resolution of referenced copyright
and license files from the generation to the scanning phase.

Do be more lenient with Chromium attribution files though, because
we don't really control them.

With this in place, make docs for Qt modules should fail if incorrect
qt_attribution.json files are found.

Pick-to: 6.4
Fixes: QTBUG-107106
Change-Id: I3d0192dfb966b4422410d0b1fb4ba4652a5303cf
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>